resolved contrast errors and link alerts

--- a/f17/css/stylesBody.css
+++ b/f17/css/stylesBody.css
@@ -17,7 +17,7 @@ p {
 	color: #000;
 	font-size: 1.2em;
 }
-aside a {
+aside a, footer a {
 	color: #00f;
 	font-size: 1.2em;
 }
@@ -155,7 +155,7 @@ main {
 footer {
 	float: left;
 	width: 100%;
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(255,255,255,0.8);
 	padding: 20px;
 }
 /*index specific */
